--- a/app/src/main/res/layout/fragment_temperature_chart.xml
+++ b/app/src/main/res/layout/fragment_temperature_chart.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:text="Temperatures"
+        android:text="@string/temperatures"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:gravity="center"
         android:layout_width="match_parent"
